# kinoway

./: ..gitignore.~undo-tree~  .gitignore  LICENSE  README.md  README.org  bazon.txt
client/: .env  .env.local.example  .gitignore  .next.config.js.~undo-tree~  .package-lock.json.swp  README.org  bazon.txt  declare.d.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/components/Button/: Button.module.scss  Button.tsx
client/components/FilmCard/: FilmCard.module.scss  FilmCard.tsx
client/components/Header/: Header.module.scss  Header.tsx
client/components/Sidebar/: Sidebar.module.scss  Sidebar.tsx
client/pages/: ._app.tsx.~undo-tree~  .index.tsx.~undo-tree~  index.tsx
client/pages/room/: .[id].tsx.~undo-tree~
client/src/constants/: .api.ts.~undo-tree~  api.ts  routes.ts
client/src/helpers/: classNames.js  classNames.ts  getCurrentYear.ts  getReviewColor.ts
client/src/hooks/: useActions.ts  useDebounce.ts  useFavorite.ts  useTypedSelector.ts  useWatchLater.ts
client/src/pages/: 404.tsx  _app.tsx  favorites.tsx  films.tsx  index.tsx  watchLater.tsx
client/src/services/: #KinowayService.ts#  .KinowayService.ts.~undo-tree~  KinowayService.ts
client/src/store/: actions.ts  store.ts
client/src/styles/: .globals.scss.~undo-tree~  .variables.module.scss.~undo-tree~  _globals.scss  _variables.scss  globals.scss  main.scss  (+1 more)
client/styles/: Home.module.scss  globals.scss
server/: .env  .env.example  Cargo.toml  README.org  go.mod  go.sum  index.ts  main.go  package.json
server/src/: main.rs
(+156 files in other folders)
