[package]
name = "Maria-kinoway-server"
version = "0.1.0"
authors = ["Berezhnev Vladimir"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "4"
actix-rt = "2.7.0"
actix-web-httpauth = "0.8.0"
jsonwebtoken = "8.2.0"