[package]
name = "Maria-kinoway-server"
version = "0.1.0"
authors = ["Berezhnev Vladimir"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0"
firebase = "0.8"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_contrib = "0.4.11"
dotenv = "0.15.0"

# actix-web = "4"
# actix-rt = "2.7.0"
# actix-web-httpauth = "0.8.0"
# jsonwebtoken = "8.2.0"
